<?xml version="1.0"?>
<package>
  <name>adventure_bringup</name>
  <version>0.1.0</version>
  <description>This package runs low-level driver nodes</description>

  <maintainer email="anton.mitrokhin@phystech.edu">ncos</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>arbotix</run_depend>
</package>
